syntax = "proto3";

package auth.v1;

import "buf/validate/validate.proto";
import "google/protobuf/timestamp.proto";
import "auth/v1/common.proto";

option go_package = "github.com/spazzle-io/spazzle-api/services/auth/pb";

message AuthenticateRequest {
  string wallet_address = 1 [(buf.validate.field).required = true];
  string user_id = 2 [(buf.validate.field).required = true, (buf.validate.field).string.uuid = true];
  string signature = 4 [(buf.validate.field).required = true];
}

message AuthenticateResponse {
  Credential credential = 1;
  Session session = 2;
}

message Credential {
  string id = 1;
  string user_id = 2;
  string wallet_address = 3;
  google.protobuf.Timestamp created_at = 4;
}
