syntax = "proto3";

package auth.v1;

import "buf/validate/validate.proto";
import "google/protobuf/timestamp.proto";

option go_package = "github.com/spazzle-io/spazzle-api/services/auth/pb";

message VerifyAccessTokenRequest {
  string user_id = 1 [(buf.validate.field).required = true, (buf.validate.field).string.uuid = true];
}

message VerifyAccessTokenResponse {
  AccessTokenPayload access_token = 1;
}

message AccessTokenPayload {
  enum Role {
    ROLE_UNSPECIFIED = 0;
    ROLE_USER = 1;
    ROLE_ADMIN = 2;
  }

  string id = 1;
  string user_id = 2;
  string wallet_address = 3;
  Role role = 4;
  google.protobuf.Timestamp issued_at = 5;
  google.protobuf.Timestamp expires_at = 6;
}
